--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -13,7 +13,9 @@
     "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-sharp": "^3.6.0",
     "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-source-sanity": "^7.0.7",
     "gatsby-transformer-sharp": "^3.6.0",
+    "mailgun-js": "^0.22.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
