adds fonts Anton & Lato

--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Anthony Slater <slaterslater@gmail.com>",
   "dependencies": {
+    "@fontsource/anton": "^4.5.0",
+    "@fontsource/lato": "^4.5.0",
     "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.6.2",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
